- Fixed 'ExtensionClass' for increased integration around 'ParserAfterTidy' hook
- Enhanced 'StubManager' to cover all required stubbing cases (tags, magic words etc.)
- Moved 'addtohead' tag functionality from SecureHTML to AddScriptCss
- AddScriptCss: enhanced to be 'stub'-enabled
- MiscParserFunctions: enhanced to be 'stub'-enabled
- ForeachFunction: enhanced to be 'stub'-enabled
- NamespaceFunctions: removed dependency on ExtensionClass, now is 'stub'-enabled
- RegexTools: removed dependency on ExtensionClass, now is 'stub'-enabled
- PageFunctions: removed dependency on ExtensionClass, now is 'stub'-enabled
- ParserTools: removed dependency on ExtensionClass, now is 'stub'-enabled
- DocProc: removed dependency on ExtensionClass, now is 'stub'-enabled
- ParserPhase2: removed dependency on ExtensionClass, now is 'stub'-enabled
- ParserPhase2: added 'EndParserPhase2' hook
- ParserPhase2: added pattern ((magic word...)) to match more closely stock MediaWiki
- ParserPhase2: added 'varcapset' parser function
- Added 'ScriptingTools' extension
- ParserPhase2: added pattern ((%magic word...%)): parser functions executed AFTER Tidy process
- ParserPhase2: added pattern ((@magic word...@)): parser functions executed BEFORE Strip process
- Adjusted 'StubManager' to remove some PHP warnings
- Added 'svn:keywords 'Id' to all files
- WatchRight extension: removed dependency on ExtensionClass, now is 'stub'-enabled
- Added 'oversight' to the rights being managed  (see Special:Ipblocklist)
- Article.php: modified 'doDeleteArticle' method so that it does not delete RecentChanges entries (for the replicator)
- Adjusted 'ViewsourceRight' for 'stubbing'
- Adjusted 'RawRight' for 'stubbing'
- Merged functionality of CacheTools in PageFunctions
- Adjusted 'geshi' for 'stubbing'
- Adjusted 'FileSystemSyntaxColoring' for stubbing
- Adjusted 'ImageLink' for stubbing
- Adjusted 'ShowRedirectPageText' for stubbing
- Adjusted 'RecentChangesManager' for stubbing