@@ -1,13 +1,23 @@
 <?php
 /*<wikitext>
-{| border=1
-| <b>File</b> || SpecialPagesManager.php
-|-
-| <b>Revision</b> || $Id$
-|-
-| <b>Author</b> || Jean-Lou Dupont
-|}<br/><br/>
- 
+{{Extension
+|name        = SpecialPagesManager
+|status      = beta
+|type        = other
+|author      = [[user:jldupont|Jean-Lou Dupont]]
+|image       =
+|version     = See SVN ($Id$)
+|update      =
+|mediawiki   = tested on 1.10 but probably works with a earlier versions
+|download    = [http://bizzwiki.googlecode.com/svn/trunk/BizzWiki/extensions/XYZ/ SVN]
+|readme      =
+|changelog   =
+|description = 
+|parameters  =
+|rights      =
+|example     =
+}}
+
 == Purpose==
 Gives the ability to a sysop to enhance a Mediawiki installation with custom 'special pages'
 managed directly from the database (instead of PHP files).
@@ -20,14 +30,14 @@ SpecialPagesManager->singleton()->setSpecialPage('page name');
 </source>
 
 == Dependancy ==
-* ExtensionClass extension
+* [[Extension:StubManager]] extension
 
 == Installation ==
 To install independantly from BizzWiki:
-* Download 'ExtensionClass' extension
+* Download 'StubManager' extension
 * Apply the following changes to 'LocalSettings.php'
 <source lang=php>
-require('extensions/ExtensionClass.php');
+require('extensions/StubManager.php');
 require('extensions/SpecialPagesManager/SpecialPagesManager.php');
 </source>
 
@@ -35,16 +45,27 @@ require('extensions/SpecialPagesManager/SpecialPagesManager.php');
 The extension defines a new right 'siteupdate' required to access the update functionality.
 
 == History ==
+* Removed dependency on ExtensionClass
+* Added 'stubbing' capability through StubManager
 
 == Code ==
 </wikitext>*/
 
-// Verify if 'ExtensionClass' is present.
-if ( !class_exists('ExtensionClass') )
-	echo 'SpecialPagesManager extension: ExtensionClass missing.';	
-else
-{
-	require('SpecialPagesManagerClass.php');
-	SpecialPagesManagerClass::singleton();
-}
+// Create the special page (the standard MW style one)
+global $wgSpecialPages, $wgAutoloadClasses;
+$wgSpecialPages['SpecialPagesManagerUpdater'] = 'SpecialPagesManagerUpdater';
+$wgAutoloadClasses['SpecialPagesManagerUpdater'] = dirname(__FILE__) . "/SpecialPagesManagerUpdater.php" ;		
+
+if (!isset( $bwExtPath ))
+	$bwExtPath = $IP.'/extensions';
+
+StubManager::createStub(	'SpecialPagesManagerClass', 
+							$bwExtPath.'/SpecialPagesManager/SpecialPagesManagerClass.php',
+							null,
+							array( 'SpecialPageExecuteAfterPage' ),
+							false,	// no need for logging support
+							null,	// tags
+							null,	// no parser functions
+							null	// no magic words
+						 );
 ?>
